plugins {
    id("java")
    id("org.jetbrains.intellij") version "1.17.2"
}

group = "com.joymutlu"
version = "1.0.1"

repositories {
    mavenCentral()
}

intellij {
    version.set("2022.2.4")
    type.set("IC")

    plugins = ["com.intellij.java"]
}

sourceCompatibility = "1.8"
targetCompatibility = "1.8"

tasks {
    signPlugin {
        certificateChain.set(System.getenv("CERTIFICATE_CHAIN"))
        privateKey.set(System.getenv("PRIVATE_KEY"))
        password.set(System.getenv("PRIVATE_KEY_PASSWORD"))
    }

    publishPlugin {
        token.set(System.getenv("PUBLISH_TOKEN"))
    }
}
